# scraping

./: .template.ipynb  .template_opened.ipynb  .template_opened_unsaved.ipynb  __main__.py  bumble_prototype.ipynb  nb1.ipynb  nb2.ipynb  nb3.ipynb  nb4.ipynb  nb5.ipynb  nb6.ipynb  nb7.ipynb  nb8.ipynb  nb9.ipynb  pyproject.toml  scrape
scraping/: __init__.py  chrome.py  random_headers.py
scraping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
