[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
aiohttp = "^3.6.2"
lxml = "^4.5.0"
bs4 = "^0.0.1"
ipython = "^7.12.0"
selenium = "^3.141.0"
discord = "^1.0.1"
cssselect = "^1.1.0"
jupyter = "^1.0.0"
scikit-image = "^0.17.2"
imutils = "^0.5.3"
opencv-python = "^4.2.0"
pandas = "^1.0.3"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
